# Finetuning-Suite

./: FINETUNING.MD  README.md  build_dataset.py  example.py  finetune.py  inference.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.yml
.github/workflows/: pull-request-links.yml  unit-test.yml
Imagebind/ImageBind-LoRA/: README.md  example.py  train.py
Imagebind/Point-Bind/: zero_shot.py
docs/: bounties.md  contributing.md  design.md  index.md
docs/ft/: finetuner.md  gptq_inference.md  index.md  inference.md
finetuning_suite/: __init__.py  base.py  finetune.py  finetuner.py  hf.py  test.py
finetuning_suite/inference/: base.py  gptq.py  hf_model.py
finetuning_suite/processing/: base.py  build_dataset.py
finetuning_suite/trainer/: base.py
finetuning_suite/utils/: main.py
fts/: __init__.py  finetuner.py
fts/inference/: base.py
fts/processing/: base.py
fts/trainer/: base.py
playground/: llama2_english.py
unilm/beats/: modules.py
unilm/beit/: run_beit_pretraining.py  run_class_finetuning.py  run_linear_eval.py
unilm/beit2/: datasets.py  engine_for_pretraining.py  engine_for_vqkd.py  modeling_pretrain.py  modeling_vqkd.py  run_beitv2_pretraining.py  run_class_finetuning.py  run_vqkd_training.py  test_get_code.py  utils.py
unilm/beit3/: datasets.py  glossary.py  run_beit3_finetuning.py
unilm/deltalm/: generate.py  interactive.py  preprocess.py  train.py
unilm/layoutreader/: decode_seq2seq.py
unilm/s2s-ft/: decode_seq2seq.py
unilm/speechlm/: SpeechLM.py  modules.py
unilm/textdiffuser/: gradio_app.py  (+3 more)
(+357 files in other folders)
