[tool.poetry]
name = "finetuning-suite"
version = "0.1.4"
description = "A fine-tuning suite based on Transformers and LoRA."
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"  

[tool.poetry.dependencies]
python = "^3.7"
torch = "*" 
transformers = "*" 
datasets = "*" 
peft = "*"  
accelerate = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
