[tool.poetry]
name = "ft-suite"
version = "0.1.7"
description = "A fine-tuning suite based on Transformers and LoRA."
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"  
packages = [
    { include = "fts" },
    { include = "fts/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
torch = "*" 
transformers = "*" 
datasets = "*" 
peft = "*"  
accelerate = "*"
optimum = "*"
bitsandbytes = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
